   with:

    -DQTC_MODIFY_QFILEDIALOG_CALLS=true

3. Link to KDE libraries (if KDE4 is installed) to read kwin settings,
   control the icons on buttons setting, and to load some icons.
4. Fix vertical dockwidget titlebars.
5. Make busy progress thinner.
6. Left align tab text - or right align for RTL.
7. Fix positioning of tab icon for RTL.
8. Allow tabs to be recoloured.

0.59.2
------
1. Also check in share/kde4/apps/kstyle/themes for qtc_*.themerc files.

0.59.1
------
1. Fix appearance of shiny glass defult buttons.
2. Give glass default buttons a light border.
3. Fix crash when apps delete progressbars before hiding - thanks
   to Dirk Mueller.
4. Add QFormLayout settings for Qt >= 4.4

0.59
----
 1. When drawing gray focus rect, draw only slightly rounded.
 2. Etch/shadow effect now applied to widget sides as well as
    top/bottom.
 3. Add etching to checks, radios, slider grooves, and progressbars.
 4. Option to have progress fill groove - default to true.
 5. Option to display non-editable combo splitter - defaults to true.
 6. Dont do coloured mouse over for mdi buttons, dock widget buttons,
    toolbar buttons, or kwin button.
 7. Better colored mouse over for checks and radios.
 8. Don't use background colour for non-coloured mouse over of
    check/radios if highlighting text backgroud.
 9. When coloring menubars, correctly draw menubar text colour
    of inactive windows.
10. Fix potential crash when using pixmap cache.
11. Fix menubar tracking when menubarMouseOver set to false.
12. Fix selection appearance usage.
13. Round listview selections.
14. Enable hover effects in all itemviews.
15. Fix spearator's on dolphin 4.1's info sidebar.
16. Fix mouseover of disabled menu items - visible when not
    lightening menu background.
17. Implement all size grips.
18. Fix border of non-rounded, selected tabs.
19. Fix tab coloured mouse-over when not rounded.
20. New mouse over effect - glow. Only applicable if etching or shadowing.