@@ -14,6 +14,7 @@
 6. Left align tab text - or right align for RTL.
 7. Fix positioning of tab icon for RTL.
 8. Allow tabs to be recoloured.
+9. Draw arrow on toolbar buttons with menus.
 
 0.59.2
 ------
